@startuml

title __INJECTIONS's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace injections {
      class com.cleanup.todoc.injections.Injection {
          {static} + provideViewModelFactory()
          {static} - provideExecutor()
          {static} - provideProjectDataSource()
          {static} - provideTaskDataSource()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace injections {
      class com.cleanup.todoc.injections.ViewModelFactory {
          - executor : Executor
          + create()
          ~ ViewModelFactory()
      }
    }
  }
  

  com.cleanup.todoc.injections.ViewModelFactory .up.|> android.arch.lifecycle.ViewModelProvider.Factory
  com.cleanup.todoc.injections.ViewModelFactory o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
  com.cleanup.todoc.injections.ViewModelFactory o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
